--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
                 <version>3.2.5</version>
                 <configuration>
                     <excludes>
-                        <exclude>**/e2e/**/**.java</exclude>
+                        <exclude>**/E2E/**/**.java</exclude>
                     </excludes>
                 </configuration>
             </plugin>
