--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,7 @@
             <artifactId>junit-jupiter</artifactId>
             <version>5.10.2</version>
         </dependency>
+        <!-- ApprovalTests -->
         <dependency>
             <groupId>com.approvaltests</groupId>
             <artifactId>approvaltests</artifactId>
@@ -136,17 +137,25 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <!-- Hamcrest -->
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest</artifactId>
+            <version>2.2</version>
+        </dependency>
         <dependency>
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-junit5</artifactId>
             <scope>test</scope>
             <version>2.27.0</version>
         </dependency>
+        <!-- Selenium -->
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
             <version>4.21.0</version>
         </dependency>
+        <!-- Webdriver Manager -->
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
