--- a/.github/workflows/build_test_maven.yml
+++ b/.github/workflows/build_test_maven.yml
@@ -19,4 +19,4 @@ jobs:
         run: |
           java -jar target//lj-support-app-java-*-exec.jar &
           sleep 20
-#         mvn test -Dtest=LoginTest
+          mvn test -Dtest=LoginTest
