--- a/.github/workflows/build_test_maven.yml
+++ b/.github/workflows/build_test_maven.yml
@@ -24,9 +24,9 @@ jobs:
         uses: phoenix-actions/test-reporting@v8
         id: test-report
         with:
-          artifact: test-results            # artifact name
-          name: JEST Tests                  # Name of the check run which will be created
-          path: '*.xml'                     # Path to test results (inside artifact .zip)
-          reporter: jest-junit              # Format of test results
+          artifact: test-results              # artifact name
+          name: JEST Tests                    # Name of the check run which will be created
+          path: target/surefire-reports/*.xml # Path to test results (inside artifact .zip)
+          reporter: jest-junit                # Format of test results
 
 
